# loomem

./: .dockerignore  .gitignore  .gitleaks.toml  .trivyignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md  config.toml  deny.toml  entities.cloud.toml  entities.toml.example  install.sh  synonyms.toml.example
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  deploy-fleet.yml  release.yml
docs/: CNAME  MCP_INSTRUCTIONS.md  QUICK_START.md  SECURITY.md  agent-conventions.md  api-reference.md  architecture.md  backup-and-restore.md  benchmarks.html  benchmarks.md  compare.html  compare.md  configuration.md  deployment.md  index.html  installation.md  llms-full.txt  llms.txt  macos-install.md  mcp-tools.md  release-runbook.md  robots.txt  sitemap.xml  user-guide.md
docs/architecture/: memory-routing.md
docs/guide/: api-reference.html  architecture.html  backup-and-restore.html  configuration.html  deployment.html  index.html  installation.html  mcp-tools.html  quick-start.html  security.html
loomem-cli/: Cargo.toml
loomem-cli/src/: main.rs
loomem-core/: Cargo.toml
loomem-core/src/: advisor.rs  audit.rs  backfill_trace.rs  config.rs  consolidation.rs  contradiction.rs  cost_tracker.rs  date_resolver.rs  decay.rs  dream.rs  dream_auto.rs  embedding_queue.rs  embeddings.rs  entity_extraction_queue.rs  entity_extractor.rs  event_date.rs  event_log.rs  hybrid_search.rs  intent_log.rs  lib.rs  llm.rs  llm_failures.rs  llm_ner.rs  local_embeddings.rs  memory_extractor.rs  memory_generator.rs  multi_query.rs  onnx_reranker.rs  pii_filter.rs  profile.rs  query_cache.rs  query_expansion.rs  reranker.rs  sanitizer.rs  scheduler.rs  source_tag.rs  stats_aggregator.rs  storage.rs  stream_stats.rs  tantivy_index.rs  (+2 more)
loomem-core/src/access_audit/: config.rs  mod.rs
loomem-core/src/ambient/: cache.rs  marker.rs  mod.rs  retrieval.rs  synthesis.rs  types.rs
loomem-core/src/associator/: clustering.rs  dream.rs  graph_walk.rs  mod.rs  sap.rs  serendipity.rs  temporal.rs  tracking.rs
loomem-core/src/content_type/: config.rs  mod.rs  tests.rs
loomem-core/src/crypto/: at_rest.rs  mod.rs  provider.rs
loomem-core/src/encrypt_backfill/: mod.rs  tests.rs
loomem-core/src/feedback/: config.rs  event.rs  mod.rs  service.rs  tests.rs
loomem-core/src/graph/: alias.rs  mod.rs  relation_type.rs
loomem-core/src/graph_repair/: mod.rs  tests.rs
loomem-core/src/manifest/: config.rs  mod.rs  tests.rs
loomem-core/src/search/: fusion.rs  mod.rs  query_classifier.rs  query_taxonomy.rs  rare_term.rs  tier1.rs
loomem-core/src/search/signals/: dense.rs  entity_match.rs  lexical.rs  mod.rs  recency.rs
loomem-core/src/storage/: keys.rs  persist.rs  rebuild.rs  scan_log.rs
loomem-core/tests/: buried_entity_probe.rs  contradiction_tombstone_filter.rs  eca_integration.rs  forgetting_eval.rs  graph_alias_integration.rs  integration_test.rs  intent_log_recovery_extended.rs  mcp_topk_caps.rs  persist_chunk_parity.rs  query_metachar_search.rs  se_regression.rs  trust_guard_integration.rs
loomem-core/tests/fixtures/: buried_entity_baseline.json  forgetting_baseline.json  forgetting_eval.json  query_metachar_docs.json  se_poc_baseline.json
loomem-dashboard/: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js  vitest.config.js
loomem-dashboard/src/: App.jsx  index.css  test-setup.js
loomem-dashboard/src/__tests__/: render.test.jsx  smoke.test.js
loomem-dashboard/src/components/: AuthGate.jsx  Layout.jsx  LoginHeroRing.jsx
loomem-dashboard/src/hooks/: useMediaQuery.js  useToasts.js
loomem-dashboard/src/lib/: api.js  apiError.js  constants.js  errorCopy.js  wordDiff.js
loomem-dashboard/src/pages/: ConnectPage.jsx  MemoryPage.jsx  SettingsPage.jsx
loomem-migrate/: Cargo.toml
loomem-migrate/src/: main.rs  sample_embeddings.rs
loomem-server/: Cargo.toml  mcp_instructions.md
loomem-server/docs/: ambient-endpoint.md
loomem-server/src/: access_hook.rs  auth.rs  content_type.rs  main.rs  manifest.rs  oauth.rs  rate_limiter.rs  resource_guards.rs  spa.rs
loomem-server/src/handlers/: admin.rs  ambient.rs  backfill_encrypt.rs  bench.rs  co_occur.rs  context.rs  dashboard.rs  date_filter.rs  delete.rs  encryption.rs  feedback.rs  graph_repair.rs  ingest.rs  mod.rs  purge.rs  scope.rs  search.rs  stats.rs  stream_stats.rs  types.rs  workers.rs
loomem-server/src/mcp/: dispatcher.rs  handler.rs  mod.rs  router.rs  session.rs  tools.rs  types.rs
loomem-server/static/: admin.html
loomem-server/tests/: admin_reprocess.rs  feedback_handler_test.rs  feedback_mcp_test.rs  purge_integration.rs  stream_stats_test.rs
scripts/: com.loomem.server.plist.template  docker-entrypoint.sh  fetch-embedding-model.sh  install-hooks.sh  macos-installer-stub.sh  macos-uninstall.command  make-macos-installer.sh
scripts/hooks/: pre-commit
(+22 files in other folders)
