[workspace]
resolver = "2"
members = [
    "loomem-core",
    "loomem-server",
    "loomem-migrate",
    "loomem-cli",
]

[workspace.package]
version = "0.2.2"
edition = "2021"
rust-version = "1.93.1"
authors = ["Loomem contributors"]
license = "Apache-2.0"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.42", features = ["full"] }
tokio-util = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Storage
rocksdb = { version = "0.24", default-features = false, features = ["snappy", "lz4"] }
tantivy = "0.25"

# HTTP client & serialization
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "form"] }
bincode = "1.3"

# HTTP server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1"
unicode-normalization = "0.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
signal-hook = "0.4"
signal-hook-tokio = { version = "0.4", features = ["futures-v0_3"] }
futures = "0.3"

[workspace.lints.clippy]
# too_many_arguments: all violations are pipeline/constructor signatures deferred to /06d struct refactor
too_many_arguments = "allow"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

